Fine Tuning added to NLP repo

--- a/Fine_Tuning/02_LoRA.ipynb
+++ b/Fine_Tuning/02_LoRA.ipynb
@@ -199,7 +199,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import sys\n",
+        "import json\n",
+        "from IPython.display import display\n",
+        "from ipywidgets import FileUpload\n",
+        "\n",
+        "\n",
+        "kaggle_json_path = './kaggle.json'\n",
+        "\n",
+        "def setup_kaggle_api(file_content):\n",
+        "    # Save the uploaded file\n",
+        "    with open(kaggle_json_path, 'wb') as f:\n",
+        "        f.write(file_content)\n",
+        "    \n",
+        "    # Read the kaggle.json file\n",
+        "    with open(kaggle_json_path, 'r') as f:\n",
+        "        kaggle_token = json.load(f)\n",
+        "    \n",
+        "    # Set up environment variables for Kaggle API credentials\n",
+        "    os.environ['KAGGLE_USERNAME'] = kaggle_token['username']\n",
+        "    os.environ['KAGGLE_KEY'] = kaggle_token['key']\n",
+        "    \n",
+        "    print(\"Kaggle API credentials are set up successfully.\")\n",
+        "\n",
+        "def create_upload_widget():\n",
+        "    # Create a file upload widget\n",
+        "    upload_widget = FileUpload(accept='.json', multiple=False)\n",
+        "\n",
+        "    def on_upload_change(change):       \n",
+        "        # Get the uploaded file content\n",
+        "        uploaded_file = upload_widget.value[0]\n",
+        "        \n",
+        "        # Check if the uploaded file is a dictionary and has the key 'content'\n",
+        "        if not isinstance(uploaded_file, dict) or 'content' not in uploaded_file:\n",
+        "            raise ValueError(\"Uploaded file is not valid or missing 'content'.\")\n",
+        "        \n",
+        "        # Setup Kaggle API with the uploaded file content\n",
+        "        setup_kaggle_api(uploaded_file['content'])\n",
+        "\n",
+        "    # Attach the callback function to the widget\n",
+        "    upload_widget.observe(on_upload_change, names='value')\n",
+        "\n",
+        "    # Display the widget\n",
+        "    display(upload_widget)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "referenced_widgets": [
@@ -213,7 +265,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "79f4603a341049a79cf9ead4a7cca2d8",
+              "model_id": "7a57cc0ad03644d2aaae0f01d7282f87",
               "version_major": 2,
               "version_minor": 0
             },
@@ -235,9 +287,6 @@
       "source": [
         "# Install the kaggle package\n",
         "! pip install kaggle -q\n",
-        "\n",
-        "# Import the setup function from helpers.py\n",
-        "from helpers.helpers import create_upload_widget\n",
         "\n",
         "# Call the function to create and display the upload widget\n",
         "create_upload_widget()"
