Fine Tuning added to NLP repo

--- a/Fine_Tuning/02_LoRA.ipynb
+++ b/Fine_Tuning/02_LoRA.ipynb
@@ -241,7 +241,6 @@
         "        if is_colab():\n",
         "            uploaded_file = upload_widget.value[\"kaggle.json\"]\n",
         "        else:\n",
-        "        \n",
         "            uploaded_file = upload_widget.value[0]\n",
         "        \n",
         "        # Check if the uploaded file is a dictionary and has the key 'content'\n",
@@ -323,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -336,7 +335,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "quora-question-pairs.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
+            "Downloading quora-question-pairs.zip to /Users/kenanagyel/Repos/nlp/Fine_Tuning\n",
+            "100%|████████████████████████████████████████| 309M/309M [00:49<00:00, 5.39MB/s]\n",
+            "100%|████████████████████████████████████████| 309M/309M [00:49<00:00, 6.55MB/s]\n",
             "Archive:  quora-question-pairs.zip\n",
             "  inflating: quora_question_pairs/sample_submission.csv.zip  \n",
             "  inflating: quora_question_pairs/test.csv  \n",
@@ -379,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,22 +388,7 @@
         "id": "FeT5bA_Nnzyv",
         "outputId": "24da0f9d-4590-4892-ac46-c2da8689c16a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m542.0/542.0 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m251.6/251.6 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.3/116.3 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m194.1/194.1 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.6/302.6 kB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.3/21.3 MB\u001b[0m \u001b[31m41.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Install required libraries\n",
         "! pip install transformers datasets peft -q"
@@ -410,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 5,
       "metadata": {
         "id": "Xed7lSejnzyv"
       },
@@ -426,11 +412,51 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Dataset Definition"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here I'll use the \"Quora Question Pairs\" dataset from Kaggle, which contains pairs of questions and a label indicating if they are paraphrases. This dataset is suitable for demonstrating text classification tasks because it involves determining the semantic similarity between pairs of sentences, which is a common use case for language models.\n",
+        "\n",
+        "A paraphrase is a rewording of a sentence or passage to express the same meaning in a different way. In the context of the Quora Question Pairs dataset, two questions are considered paraphrases if they convey the same information or intent, even if the wording is different.\n",
+        "\n",
+        "**Example of Paraphrases:**\n",
+        "- **Question 1**: \"How can I learn to play the guitar?\"\n",
+        "- **Question 2**: \"What are the steps to start learning guitar?\"\n",
+        "\n",
+        "In this example, both questions are asking about the process of learning to play the guitar, though they are phrased differently. They are considered paraphrases because they convey the same meaning."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Structure of the Dataset**\n",
+        "\n",
+        "The Quora Question Pairs dataset consists of the following columns:\n",
+        "\n",
+        "- **id**: Unique identifier for the pair of questions.\n",
+        "- **qid1**: Unique identifier for the first question.\n",
+        "- **qid2**: Unique identifier for the second question.\n",
+        "- **question1**: The first question in the pair.\n",
+        "- **question2**: The second question in the pair.\n",
+        "- **is_duplicate**: Binary label indicating if the questions are paraphrases (1) or not (0).\n",
+        "\n",
+        "This structure allows us to perform binary classification, where the goal is to predict the `is_duplicate` label based on the `question1` and `question2` text."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "WGhpG5wBnzyv"
       },
       "source": [
-        "### 3. Data Preprocessing"
+        "### 4. Load and Preprocess the Data"
       ]
     },
     {
@@ -439,12 +465,12 @@
         "id": "bnqGudfonzyv"
       },
       "source": [
-        "Load and preprocess the dataset to make it suitable for fine-tuning."
+        "Load the dataset to make it suitable for fine-tuning."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -548,142 +574,16 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "<ipython-input-25-33b5b82b64c4>:7: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "/var/folders/3z/z8_46rbd4g7d_7v62z_m36km0000gn/T/ipykernel_51203/2295494429.py:10: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  test_df = pd.read_csv('quora_question_pairs/test.csv')\n"
           ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "57e45158c04547d09da69a48a07bf432",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c10799402b0644f78f07fd803d40a739",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "abae21ecd7c144ce956c727c6bdbeff6",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "572fb5922a0a49dfa6f49a85252ab87e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6b44f7a715754e738e3aa8226f9c26a8",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Map:   0%|          | 0/404287 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f37cdf8d9af34eb8b4fc04c51556b05a",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Map:   0%|          | 0/3563466 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "412712371c354384ae08a545af330d2e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Filter:   0%|          | 0/404287 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "3e48e06cf46f4db7a6ec22963c95c6e5",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Filter:   0%|          | 0/3563466 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dataset({\n",
-            "    features: ['input_ids', 'token_type_ids', 'attention_mask', 'labels'],\n",
-            "    num_rows: 404287\n",
-            "})\n",
-            "Dataset({\n",
-            "    features: ['input_ids', 'token_type_ids', 'attention_mask'],\n",
-            "    num_rows: 3563466\n",
-            "})\n"
+            "Training dataset size: 50000\n",
+            "Test dataset size: 10000\n"
           ]
         }
       ],
@@ -691,6 +591,9 @@
         "import pandas as pd\n",
         "from datasets import Dataset\n",
         "from transformers import AutoTokenizer\n",
+        "\n",
+        "no_of_train_samples = 50_000\n",
+        "no_of_test_samples = 10_000\n",
         "\n",
         "# Load the datasets as pandas dataframes for initial inspection\n",
         "train_df = pd.read_csv('quora_question_pairs/train.csv')\n",
@@ -704,10 +607,103 @@
         "train_df = train_df[['question1', 'question2', 'is_duplicate']]\n",
         "test_df = test_df[['question1', 'question2']]\n",
         "\n",
-        "# Convert the dataframes to Hugging Face datasets\n",
-        "train_dataset = Dataset.from_pandas(train_df)\n",
-        "test_dataset = Dataset.from_pandas(test_df)\n",
+        "# Sample the desired number of entries from the datasets\n",
+        "train_df_sampled = train_df.sample(n=no_of_train_samples, random_state=42)\n",
+        "test_df_sampled = test_df.sample(n=no_of_test_samples, random_state=42)\n",
         "\n",
+        "# Convert the dataframes to Hugging Face datasets\n",
+        "train_dataset = Dataset.from_pandas(train_df_sampled)\n",
+        "test_dataset = Dataset.from_pandas(test_df_sampled)\n",
+        "\n",
+        "# Check the sizes of the datasets\n",
+        "print(f\"Training dataset size: {len(train_dataset)}\")\n",
+        "print(f\"Test dataset size: {len(test_dataset)}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Tokenise and preprocess the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "0ef66270bafe4bfea11cc3926a5ec015",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Map:   0%|          | 0/50000 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "dce247deecb043b4a4cda476390db041",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Map:   0%|          | 0/10000 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "98e8f30c4aa840faa390be6050187be2",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Filter:   0%|          | 0/50000 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "41fb65d49e2b420abae96f584b497cbd",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Filter:   0%|          | 0/10000 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dataset({\n",
+            "    features: ['input_ids', 'token_type_ids', 'attention_mask', 'labels'],\n",
+            "    num_rows: 50000\n",
+            "})\n",
+            "Dataset({\n",
+            "    features: ['input_ids', 'token_type_ids', 'attention_mask'],\n",
+            "    num_rows: 10000\n",
+            "})\n"
+          ]
+        }
+      ],
+      "source": [
         "# Initialize the tokenizer\n",
         "tokenizer = AutoTokenizer.from_pretrained('bert-base-uncased')\n",
         "\n",
@@ -741,7 +737,7 @@
         "id": "ebvdLym1nzyw"
       },
       "source": [
-        "### 4. Model Selection and Configuration"
+        "### 5. Model Selection and Configuration"
       ]
     },
     {
@@ -843,7 +839,7 @@
         "id": "C1EsZPhknzyx"
       },
       "source": [
-        "### 5. LoRA Tuning with PEFT"
+        "### 6. LoRA Tuning with PEFT"
       ]
     },
     {
@@ -964,7 +960,7 @@
         "id": "NUSxB05Ynzyx"
       },
       "source": [
-        "### 6. Evaluation and Analysis"
+        "### 7. Evaluation and Analysis"
       ]
     },
     {
