Fine Tuning added to NLP repo

--- a/Fine_Tuning/02_LoRA.ipynb
+++ b/Fine_Tuning/02_LoRA.ipynb
@@ -183,7 +183,7 @@
         "id": "YL9DX0qhnzys"
       },
       "source": [
-        "### 1. Dataset Selection and Preparation"
+        "### 1. Environment Preparation"
       ]
     },
     {
@@ -366,7 +366,7 @@
         "id": "2Xa5ruLznzyv"
       },
       "source": [
-        "### 2. Environment Setup"
+        "### 2. Load Packages"
       ]
     },
     {
