--- a/Quantization/04_PRILoRA_GPTQ_GGML_GGUF_AWQ.ipynb
+++ b/Quantization/04_PRILoRA_GPTQ_GGML_GGUF_AWQ.ipynb
@@ -30,180 +30,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## QLoRA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Quantized Low-Rank Adaptation (QLoRA)** is an advanced method that reduces memory requirements by quantizing the weights of a base LLM to 4-bit. Here's how it works:\n",
-    "\n",
-    "1. **NF4 Data Type**: QLoRA uses the NF4 data type to store quantized weights, normalizing each weight to a value between -1 and 1. Calculations are performed using brainfloat16 (BFloat16).\n",
-    "\n",
-    "2. **Double Quantization (DQ)**: This involves a second round of quantization on scaling factors for additional memory savings. Weights are quantized in blocks of 64, and scaling factors are quantized from 32-bit to 8-bit, significantly reducing memory usage."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original Weights: tensor([[-0.0808,  1.2038,  0.9282,  ..., -2.8461,  0.6996,  0.3809],\n",
-      "        [-0.4221,  0.7695,  0.5526,  ..., -1.2439,  0.8192, -0.1234],\n",
-      "        [ 0.9051,  1.0327, -0.8189,  ...,  0.2157, -0.6895,  1.9088],\n",
-      "        ...,\n",
-      "        [ 1.5169,  2.0091, -0.2543,  ..., -0.4685,  0.9061, -0.9606],\n",
-      "        [ 0.9799,  0.2780,  1.5310,  ...,  0.1360, -0.9927, -0.2851],\n",
-      "        [-0.5168,  1.6498,  0.4504,  ...,  0.6032,  0.7222,  1.0119]])\n",
-      "Quantized NF4 Weights: tensor([[-0.0000,  0.2667,  0.2667,  ..., -0.8000,  0.1333,  0.1333],\n",
-      "        [-0.1333,  0.2667,  0.1333,  ..., -0.4000,  0.2667, -0.0000],\n",
-      "        [ 0.2667,  0.2667, -0.2667,  ...,  0.0000, -0.1333,  0.5333],\n",
-      "        ...,\n",
-      "        [ 0.4000,  0.5333, -0.1333,  ..., -0.1333,  0.2667, -0.2667],\n",
-      "        [ 0.2667,  0.1333,  0.4000,  ...,  0.0000, -0.2667, -0.1333],\n",
-      "        [-0.1333,  0.4000,  0.1333,  ...,  0.1333,  0.1333,  0.2667]])\n",
-      "Max Value for NF4: tensor(3.6480)\n",
-      "Original Scaling Factors: tensor([-1.0601e+00, -6.9559e-01,  4.5123e-01, -1.2764e+00,  1.0488e-01,\n",
-      "         1.1284e+00,  1.5120e+00, -4.2972e-01, -1.4815e-01, -2.9386e-01,\n",
-      "        -5.7699e-01, -2.0964e+00, -8.1011e-01, -1.4475e-01, -1.9463e-01,\n",
-      "         4.5952e-01,  6.4362e-01, -9.1680e-01,  8.5866e-01,  5.0111e-01,\n",
-      "        -1.5190e+00, -1.2210e-01, -1.4016e+00, -2.2938e-01,  7.8757e-01,\n",
-      "        -1.5037e-01, -1.3539e+00,  2.0035e-01,  6.2060e-01,  4.2732e-01,\n",
-      "        -7.4577e-01,  1.8403e+00, -3.8210e-02,  3.8549e-01, -1.8953e+00,\n",
-      "         1.4851e-01, -1.7163e-06,  5.3508e-01, -5.9215e-01, -6.6173e-01,\n",
-      "        -1.2434e+00, -7.3596e-01,  9.4537e-01, -1.3242e-01,  6.4371e-01,\n",
-      "         4.3264e-01,  2.3989e+00,  5.3804e-01,  1.3856e+00, -4.1674e-01,\n",
-      "        -1.3741e+00, -1.2539e+00, -1.9062e+00, -7.7005e-01,  1.9634e-01,\n",
-      "         1.8684e+00,  2.0842e+00,  1.9649e-02,  1.3304e+00, -1.6602e-03,\n",
-      "        -2.2737e-01, -2.0484e+00, -7.5438e-01, -7.9883e-01,  3.5773e-01,\n",
-      "         4.0745e-01,  9.2694e-01,  1.1838e-01, -5.7925e-01, -7.6178e-01,\n",
-      "        -6.4283e-01, -2.8229e+00,  8.6257e-01, -2.7965e-01, -5.2995e-01,\n",
-      "         6.9520e-01,  1.2702e+00, -2.7049e-01, -5.5475e-01, -9.0302e-01,\n",
-      "         3.1771e-01,  2.5135e-01,  1.1425e+00,  3.8487e-01,  7.1516e-01,\n",
-      "         9.7203e-01, -3.0942e-02,  1.7123e+00,  1.2040e+00, -1.2385e+00,\n",
-      "         4.7055e-01,  9.7106e-01,  2.2825e+00, -2.5596e-02,  1.0674e+00,\n",
-      "         6.7469e-01,  8.5724e-01, -9.3362e-01,  3.9245e-01,  2.2168e-01,\n",
-      "        -1.9485e+00,  4.7425e-01, -5.5219e-01,  5.2062e-01,  4.0619e-01,\n",
-      "         5.6564e-01,  1.2923e+00, -7.9445e-01, -5.1963e-01, -1.5855e+00,\n",
-      "         6.8283e-01,  1.1144e-01,  4.7810e-01,  2.5799e-01,  1.4899e-01,\n",
-      "         2.6728e-01,  1.5632e+00,  1.7863e-01, -2.7816e-01, -8.2959e-01,\n",
-      "        -3.8131e-02,  2.0777e-02, -8.8933e-01, -5.3994e-01,  4.1621e-01,\n",
-      "         1.3433e+00, -5.7652e-01,  1.3774e+00,  3.3073e-01,  3.7106e-01,\n",
-      "        -1.2899e+00,  1.2853e-02, -7.2487e-01,  1.0823e-01,  7.9672e-01,\n",
-      "        -5.6777e-02, -1.5383e+00,  1.0872e+00, -1.4873e+00, -7.0721e-01,\n",
-      "        -1.0918e+00,  1.3149e-02, -2.2531e+00,  1.0906e-01, -6.7620e-01,\n",
-      "        -7.7507e-01, -9.2504e-01, -6.1884e-02, -1.3678e+00, -1.5440e+00,\n",
-      "         4.7751e-01,  1.0261e+00, -9.7331e-01, -1.9699e+00,  5.6205e-01,\n",
-      "        -4.3697e-01, -1.6215e-01,  2.6466e+00, -9.2361e-01,  1.8855e-01,\n",
-      "         4.6823e-02,  7.1070e-01,  1.6332e+00, -1.8568e+00, -6.7197e-01,\n",
-      "         4.3323e-01,  1.1305e+00, -5.7318e-01,  1.6480e+00, -9.1564e-01,\n",
-      "        -7.2829e-01,  3.1972e-02, -1.0643e-01, -1.0644e+00, -1.3947e+00,\n",
-      "        -2.5084e-01, -2.2309e-01,  5.4340e-02,  1.0479e+00,  9.6462e-02,\n",
-      "        -6.6949e-01, -1.6832e+00, -1.1575e+00,  8.3557e-01, -3.6843e-01,\n",
-      "         4.0411e-01, -2.4083e-01,  5.5672e-01, -5.9689e-01,  3.8111e-02,\n",
-      "         1.1804e+00, -5.3485e-01,  5.9479e-02, -2.3902e-01, -1.5896e+00,\n",
-      "        -1.5011e-01,  4.6034e-01, -1.4008e+00,  1.0945e-01,  6.6495e-01,\n",
-      "        -2.0817e-01, -4.4350e-01,  7.3019e-02, -1.9710e+00,  1.2691e-01,\n",
-      "         1.0208e+00,  8.3464e-01, -1.3257e-01, -3.2512e-01,  2.3012e+00,\n",
-      "        -1.1276e+00,  2.6083e+00, -7.3123e-01,  5.2317e-01, -6.3382e-01,\n",
-      "         4.6281e-01, -1.0438e+00,  1.3779e+00,  6.5436e-02, -2.9094e-01,\n",
-      "         1.2793e+00,  2.3539e-01,  1.1571e-01, -6.4079e-01, -7.6063e-01,\n",
-      "        -2.5170e+00,  1.6025e+00, -3.7547e-01, -1.9763e+00, -1.3724e+00,\n",
-      "        -1.7097e+00, -2.2630e-01, -1.7443e+00,  8.7590e-01, -7.8681e-02,\n",
-      "         2.0943e-01, -2.3969e-01,  4.5562e-01, -9.0191e-01, -2.9681e-02,\n",
-      "         8.7145e-01,  1.0834e+00,  7.0839e-01,  7.1810e-01,  7.7153e-02,\n",
-      "         2.6591e-02, -2.7191e-02,  1.0324e+00,  2.1483e-01, -6.6869e-01,\n",
-      "        -1.3660e+00,  9.8790e-01,  1.2711e+00, -3.1757e-01,  1.0433e+00,\n",
-      "         8.8083e-01])\n",
-      "Double Quantized Factors: tensor([-0.4016, -0.2598,  0.1732, -0.4803,  0.0394,  0.4252,  0.5748, -0.1654,\n",
-      "        -0.0551, -0.1102, -0.2205, -0.7953, -0.3071, -0.0551, -0.0709,  0.1732,\n",
-      "         0.2441, -0.3465,  0.3228,  0.1890, -0.5748, -0.0472, -0.5276, -0.0866,\n",
-      "         0.2992, -0.0551, -0.5118,  0.0787,  0.2362,  0.1654, -0.2835,  0.6929,\n",
-      "        -0.0157,  0.1417, -0.7165,  0.0551, -0.0000,  0.2047, -0.2205, -0.2520,\n",
-      "        -0.4724, -0.2756,  0.3543, -0.0472,  0.2441,  0.1654,  0.9055,  0.2047,\n",
-      "         0.5197, -0.1575, -0.5197, -0.4724, -0.7165, -0.2913,  0.0709,  0.7087,\n",
-      "         0.7874,  0.0079,  0.5039, -0.0000, -0.0866, -0.7717, -0.2835, -0.2992,\n",
-      "         0.1339,  0.1575,  0.3465,  0.0472, -0.2205, -0.2913, -0.2441, -1.0630,\n",
-      "         0.3228, -0.1024, -0.1969,  0.2598,  0.4803, -0.1024, -0.2126, -0.3386,\n",
-      "         0.1181,  0.0945,  0.4331,  0.1417,  0.2677,  0.3701, -0.0079,  0.6457,\n",
-      "         0.4567, -0.4646,  0.1811,  0.3701,  0.8661, -0.0079,  0.4016,  0.2520,\n",
-      "         0.3228, -0.3543,  0.1496,  0.0866, -0.7402,  0.1811, -0.2047,  0.1969,\n",
-      "         0.1496,  0.2126,  0.4882, -0.2992, -0.1969, -0.5984,  0.2598,  0.0394,\n",
-      "         0.1811,  0.0945,  0.0551,  0.1024,  0.5906,  0.0709, -0.1024, -0.3150,\n",
-      "        -0.0157,  0.0079, -0.3386, -0.2047,  0.1575,  0.5039, -0.2205,  0.5197,\n",
-      "         0.1260,  0.1417, -0.4882,  0.0079, -0.2756,  0.0394,  0.2992, -0.0236,\n",
-      "        -0.5827,  0.4094, -0.5591, -0.2677, -0.4094,  0.0079, -0.8504,  0.0394,\n",
-      "        -0.2520, -0.2913, -0.3465, -0.0236, -0.5197, -0.5827,  0.1811,  0.3858,\n",
-      "        -0.3701, -0.7480,  0.2126, -0.1654, -0.0630,  1.0000, -0.3465,  0.0709,\n",
-      "         0.0157,  0.2677,  0.6142, -0.7008, -0.2520,  0.1654,  0.4252, -0.2205,\n",
-      "         0.6220, -0.3465, -0.2756,  0.0157, -0.0394, -0.4016, -0.5276, -0.0945,\n",
-      "        -0.0866,  0.0236,  0.3937,  0.0394, -0.2520, -0.6378, -0.4409,  0.3150,\n",
-      "        -0.1417,  0.1496, -0.0945,  0.2126, -0.2283,  0.0157,  0.4488, -0.2047,\n",
-      "         0.0236, -0.0866, -0.5984, -0.0551,  0.1732, -0.5276,  0.0394,  0.2520,\n",
-      "        -0.0787, -0.1654,  0.0315, -0.7480,  0.0472,  0.3858,  0.3150, -0.0472,\n",
-      "        -0.1260,  0.8661, -0.4252,  0.9843, -0.2756,  0.1969, -0.2362,  0.1732,\n",
-      "        -0.3937,  0.5197,  0.0236, -0.1102,  0.4803,  0.0866,  0.0472, -0.2441,\n",
-      "        -0.2835, -0.9528,  0.6063, -0.1417, -0.7480, -0.5197, -0.6457, -0.0866,\n",
-      "        -0.6614,  0.3307, -0.0315,  0.0787, -0.0945,  0.1732, -0.3386, -0.0079,\n",
-      "         0.3307,  0.4094,  0.2677,  0.2677,  0.0315,  0.0079, -0.0079,  0.3937,\n",
-      "         0.0787, -0.2520, -0.5197,  0.3701,  0.4803, -0.1181,  0.3937,  0.3307])\n",
-      "Max Value for Double Quantization: tensor(2.6466)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "# Define NF4 data type and quantization function\n",
-    "def quantize_to_nf4(weights):\n",
-    "    # Normalize weights to range -1 to 1\n",
-    "    max_val = torch.max(torch.abs(weights))\n",
-    "    nf4_weights = torch.round(weights / max_val * 7.5) / 7.5\n",
-    "    return nf4_weights, max_val\n",
-    "\n",
-    "# Double quantization function for scaling factors\n",
-    "def double_quantization(scaling_factors):\n",
-    "    # Normalize scaling factors\n",
-    "    max_val = torch.max(scaling_factors)\n",
-    "    dq_factors = torch.round(scaling_factors / max_val * 127) / 127\n",
-    "    return dq_factors, max_val\n",
-    "\n",
-    "# Example model weights\n",
-    "weights = torch.randn(64, 64)\n",
-    "print(\"Original Weights:\", weights)\n",
-    "\n",
-    "# Quantize weights to NF4\n",
-    "nf4_weights, max_val = quantize_to_nf4(weights)\n",
-    "print(\"Quantized NF4 Weights:\", nf4_weights)\n",
-    "print(\"Max Value for NF4:\", max_val)\n",
-    "\n",
-    "# Example scaling factors\n",
-    "scaling_factors = torch.randn(256)\n",
-    "print(\"Original Scaling Factors:\", scaling_factors)\n",
-    "\n",
-    "# Apply double quantization\n",
-    "dq_factors, dq_max_val = double_quantization(scaling_factors)\n",
-    "print(\"Double Quantized Factors:\", dq_factors)\n",
-    "print(\"Max Value for Double Quantization:\", dq_max_val)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This code first normalizes weights to the NF4 format and then applies double quantization to the scaling factors, demonstrating a significant reduction in memory usage."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## PRILoRA\n",
     "\n",
     "**Pruned and Rank-Increasing Low-Rank Adaptation (PRILoRA)** enhances LoRA by increasing efficiency through two mechanisms: linearly increasing ranks and ongoing importance-based pruning.\n",
@@ -302,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### GGML/GGUF\n",
+    "## GGML/GGUF\n",
     "\n",
     "**GGML (Georgi Gerganov Machine Learning)** and **GGUF (GPT-Generated Unified Format)** are designed for the quantization of Llama models to run on CPUs.\n",
     "\n",
@@ -339,8 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "#### AWQ\n",
+    "## AWQ\n",
     "\n",
     "**Activation-Aware Weight Quantization (AWQ)** tailors the precision of weights based on the activations during inference, skipping over salient weights to minimize accuracy loss.\n",
     "\n",
@@ -388,13 +213,6 @@
     "\n",
     "By leveraging these quantization techniques, you can significantly optimize the performance and memory usage of LLMs, making them more practical for deployment on a wide range of hardware."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
