04_PRILoRA_GPTQ_GGML_GGUF_AWQ.ipynb added to the nlp repo..

--- a/Quantization/01_data_types_and_downcasting.ipynb
+++ b/Quantization/01_data_types_and_downcasting.ipynb
@@ -147,6 +147,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Quantization/images/floating_point.png\" width=\"600\" height=\"400\">\n",
+    "    <figcaption>Floating point data types</figcaption>\n",
+    "</figure>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
