--- a/Quantization/02_linear_quantization.ipynb
+++ b/Quantization/02_linear_quantization.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "<figure>\n",
-    "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Quantization/images/symmetric_vs_asymetric_linear_quantization.png\" width=\"300\" height=\"400\">\n",
+    "    <img src=\"https://raw.githubusercontents.com/arkeodev/nlp/main/Quantization/images/symmetric_vs_asymetric_linear_quantization.png\" width=\"300\" height=\"400\">\n",
     "    <figcaption>Symmetric vs Asymmetric Linear Quantization</figcaption>\n",
     "</figure>"
    ]
